--- a/Examples/web/WebSupport.html
+++ b/Examples/web/WebSupport.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
+
 <html>
+
     <head>
         <title> </title>
+        <style type="text/css">
+            .center {
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+              width: 50%;
+            }
+            search img{
+                display:inline;
+                width: 15px;
+            }
+            /*help*/
+            /*{*/
+            /*    position: relative;*/
+            /*}*/
+            help button{
+                position:relative;
+                right:90px;
+                bottom:0;
+                right:0;
+            }
+        </style>
     </head>
     <body>
         <main>
+            <header>
+                <img align = "middle" src = "img/support.jpg" class="center"/>
+            </header>
             <content>
-                <section>
-                    <search>
-                        
+                <section class="center">
+                    <search class="center">
+                        <input type="textarea" name="searchBar"/>
+                        <button> <img src ="img/search.png"  /> </button>
                     </search>
+                    <words>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam arcu enim, porttitor ut pharetra eu, faucibus in ligula. Donec lacus purus, aliquet non porttitor in, egestas eu orci. Vivamus in efficitur nibh. Proin molestie at quam at ultricies. Pellentesque sit amet augue sed tellus dignissim mollis. Praesent ullamcorper, urna ac aliquet hendrerit, ligula felis venenatis dui, ut porta elit orci in metus. Nulla consequat turpis sed dapibus viverra.
+                            Sed placerat eleifend interdum. Ut consequat, mi a posuere auctor, odio sem malesuada diam, bibendum sollicitudin ex nunc non magna. Integer nisi libero, commodo vel lacus nec, pharetra gravida sem. Aenean sit amet ante elit. Aliquam interdum enim eu fringilla vehicula. Cras sit amet lacus at felis imperdiet varius sit amet at mauris. Donec ut quam consequat, aliquet quam et, porta massa. Integer eget mauris massa. Praesent mattis velit a massa congue tempus. 
+                            Nunc a tristique tortor, ut tristique odio. Suspendisse tempor dui tortor, vitae malesuada dolor efficitur a. Curabitur laoreet mauris iaculis arcu volutpat pellentesque. In ut risus non est dapibus posuere varius non libero. Fusce nulla lectus, ornare vel aliquam id, tristique at metus. Morbi tellus dolor, venenatis in varius in, accumsan eget ex. In hac habitasse platea dictumst. Nunc suscipit sagittis posuere. Aliquam finibus, leo at vestibulum placerat, 
+                            elit leo elementum lectus, ut rutrum justo leo et diam. Morbi ornare tellus id arcu fringilla, at commodo enim egestas.Ut ornare dignissim metus, nec condimentum sem interdum ut. Suspendisse potenti. Suspendisse dignissim finibus felis nec tincidunt. Curabitur quis suscipit nisl, vitae imperdiet tortor. Sed blandit ultrices tristique. Sed fermentum auctor malesuada. Maecenas euismod nibh non magna tincidunt, at mattis erat dictum. Mauris imperdiet gravida dolor, 
+                            vel varius neque laoreet sed. Aliquam a pharetra leo. Ut lacinia nisl eu commodo imperdiet. Morbi non scelerisque ipsum. Donec purus velit, dictum vitae tortor vitae, iaculis tincidunt diam. Cras a tortor vitae risus sollicitudin aliquet blandit sit amet erat. Aliquam rhoncus ipsum vestibulum elit ullamcorper, sit amet interdum turpis venenatis.Morbi gravida, tortor id ultricies lobortis, nunc orci posuere turpis, vel tempor justo arcu ut elit. Sed turpis est, 
+                            mollis non dapibus eu, ultricies at lacus. Proin vestibulum tincidunt ex, eget placerat ipsum eleifend in. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In hac habitasse platea dictumst. Nunc commodo arcu eu lacinia elementum. Nam fringilla ligula at massa tincidunt, id consequat sem dapibus.
+                        </p>
+                    </words>
                 </section>
+                <help>
+                    <button> <img src="img/help.png"/> </button>
+                </help>
             </content>
             
             <footer>&copy; 2019</footer>
