--- a/homeWorks/hw1/page4.html
+++ b/homeWorks/hw1/page4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Programming Languages </title>
@@ -11,17 +11,17 @@
         </header>
         
         <nav>
-            <hr width="50%"/>
+            <hr />
             <a href="index.html">History</a>
             <a href="page2.html">Fortran</a>
             <a href="page3.html">COBOL</a>
             <a href="page4.html">Algol</a>
         </nav>
-        <br></br>
-        <h1><center>Who?</center></h1>
+        <br />
+        <h1>Who?</h1>
         <div class="top3">
             <div>
-                <img src="img/perlis.jpeg"/>
+                <img src="img/perlis.jpeg" alt="whoP"/>
             </div>
             <div>
                 <strong>Alan Jay Perlis</strong>, born in April 1, 1922 – February 7, 1990,<br>
@@ -33,24 +33,24 @@
                 of the team that developed the ALGOL programming language.
             </div>
         </div>
-        <br></br>
-        <h1><center>What?</center></h1>
+        <br />
+        <h1>What?</h1>
         <div class="middle2">
             <div>
-                <strong>Algebraic Oriented Language, Algorithmic Language(ALGOL)</strong>,<br>
-                ALGOL had recursive subprograms—procedures that could invoke<br>
-                themselves to solve a problem by reducing it to a smaller<br>
-                problem of the same kind. ALGOL introduced block structure,<br>
-                in which a program is composed of blocks that might contain<br>
-                both data and instructions and have the same structure as an<br>
-                entire program. Block structure became a powerful tool for<br>
+                <strong>Algebraic Oriented Language, Algorithmic Language(ALGOL)</strong>,<br />
+                ALGOL had recursive subprograms—procedures that could invoke<br />
+                themselves to solve a problem by reducing it to a smaller<br />
+                problem of the same kind. ALGOL introduced block structure,<br />
+                in which a program is composed of blocks that might contain<br />
+                both data and instructions and have the same structure as an<br />
+                entire program. Block structure became a powerful tool for<br />
                 building large programs out of small components.
             </div>
              <div>
-                <img src="img/algol.jpeg"></img>
+                <img src="img/algol.jpeg" alt="iconAlgol">
             </div>
         </div>
 
     </body>
-    <br></br>
+    <br />
 </html>
