--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,7 +22,7 @@
         <main>
             
             <figure id="me">
-                <img src="img/samplePicture.jpeg" alt="Picture of Elizabeth Hernandez"/>
+                <img src="img/me.jpg" width="200px" height="200" alt="Picture of Elizabeth Hernandez"/>
             </figure>
             
             <description id="welcomeText">
